Fix Canvas width to lower on Mobile screens

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,3 +9,5 @@ body {
   text-align: center;
   width: 100vw;
 }
+
+canvas { width: 70%; }
